--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,5 @@
 artifacts_root: artifacts
 
-
 data_ingestion:
   root_dir: artifacts/data_ingestion
   source_URL: https://drive.google.com/file/d/1liceh2Eaj-oGtbmIhCMBBPxhcUrchX6r/view?usp=sharing
@@ -12,3 +11,6 @@ prepare_base_model:
   base_model_path: artifacts/prepare_base_model/base_model.h5
   updated_base_model_path: artifacts/prepare_base_model/updated_base_model.h5
 
+training:
+  root_dir: artifacts/training
+  trained_model_path: artifacts/training/model.h5
